log
Sun Mar 20 18:31:15 UTC 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:6: error: unknown type name ‘list’; did you mean ‘List’?
      list* lista = (list *) calloc(1,sizeof(list));
      ^~~~
      List
list.c:32:21: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
      list* lista = (list *) calloc(1,sizeof(list));
                     ^~~~
                     lista
list.c:32:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:27: error: expected expression before ‘)’ token
      list* lista = (list *) calloc(1,sizeof(list));
                           ^
list.c:33:11: error: request for member ‘head’ in something not a structure or union
      lista->head = NULL;
           ^~
list.c:34:11: error: request for member ‘current’ in something not a structure or union
      lista->current = NULL;
           ^~
list.c:35:11: error: request for member ‘tail’ in something not a structure or union
      lista->tail = NULL;
           ^~
list.c:36:13: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
      return lista;
             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
2c46183
Sun Mar 20 18:32:12 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:21: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
      List* lista = (list *) calloc(1,sizeof(list));
                     ^~~~
                     lista
list.c:32:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:27: error: expected expression before ‘)’ token
      List* lista = (list *) calloc(1,sizeof(list));
                           ^
Compilation failed
deda46d
Sun Mar 20 18:32:31 UTC 2022: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:21: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
      List* lista = (list*) calloc(1,sizeof(list));
                     ^~~~
                     lista
list.c:32:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:26: error: expected expression before ‘)’ token
      List* lista = (list*) calloc(1,sizeof(list));
                          ^
Compilation failed
41aa8c6
Sun Mar 20 18:32:44 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:44: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
      List* lista = (List*) calloc(1,sizeof(list));
                                            ^~~~
                                            lista
list.c:32:44: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d5f0598
Sun Mar 20 18:32:54 UTC 2022: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:45: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
      List* lista = (List *) calloc(1,sizeof(list));
                                             ^~~~
                                             lista
list.c:32:45: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a8e1dd8
Sun Mar 20 18:33:07 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7ad32a7
Sun Mar 20 18:37:33 UTC 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:41:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(list->head = NULL)
        ^~~~
cc1: all warnings being treated as errors
Compilation failed
f5e829a
